tests/compile_fail/from_str/union.stderr
error: `FromStr` cannot be derived for unions
 --> tests/compile_fail/from_str/union.rs:2:1
  |
2 | union IntOrFloat {
  | ^^^^^
